//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table devices {
  id String [pk]
  name String [unique, not null]
  description String
  deviceProfiles device_profiles [not null]
}

Table profiles {
  id String [pk]
  name String [unique, not null]
  description String
  deviceProfile device_profiles [not null]
}

Table light_scenes {
  id String [pk]
  name String [unique, not null]
  description String
  type String [not null]
  data Json [not null]
  deviceProfiles device_profiles [not null]
}

Table device_profiles {
  id String [pk]
  deviceId String [not null]
  profileId String [not null]
  deviceName String
  lightSceneId String
  device devices [not null]
  profile profiles [not null]
  lightScene light_scenes

  indexes {
    (deviceId, profileId) [unique]
  }
}

Ref: device_profiles.deviceId > devices.id [delete: Cascade]

Ref: device_profiles.profileId > profiles.id [delete: Cascade]

Ref: device_profiles.lightSceneId > light_scenes.id [delete: Set Null]